--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+Version: 2.0.1
+Date: 2024-11-15
+  Features:
+  - 2.0 Support
+  - Support Space Age mod
+  - Add quality modules 4 & 5
+
+----------------------
+
 Version: 1.0.2
 Date: 2022-06-16
   Features:
